    set gui.video_display to the second display name, usually ":0.1" or ":1",
  * removed -funroll-all-loops from SPARC and PPC targets.
  * fix xitk trying set a window property when its atom may be undefined
  * add --disable-shm-default configure option which sets feature.shm to zero
    but keeps the shm code compiled in

xine-ui (0.99.1) unstable; urgency=low

  * errors are also reported to console if verbose mode is ON (or --bug-report),
  * fix segfault with too long actions on start (like -HHHHH....),
  * lots of xine-check updates (including security fixes),
  * fix redundant keybindings reports,
  * fix unplayable streams and loop (of death) mode,
  * all supported playlist can be downloadable,
  * fix OSD stream info for the DXR3,
  * fix lirc skeleton and '%', and 100% CPU eating when lircd quit (thanks to Christoph Bartelmus <lirc@bartelmus.de>),
  * playlist meta info scanning no more disturn playback,
  * auto buttons can be limited in skinconfig (update your already downloaded skins),
  * change and add checkbox styles (user selectable, see xitk README),
  * fix chain-reaction crashes with help and stuff,
  * shortcuts displayed in menus,
  * fix xinerama fullscreen (again),
  * fix layering (one more time),
  * "ESC" key dismiss windows,
  * fix enqueuing and new streamtuner,
  * MooSFV an Noatun playlist formats added,
  * display offsets on OSD in mm:ss.ss format,
  * add skin caching (speedup)
  * remove all skins but xinetic,
  * implement AMP muting,
  * fix xinerama-fullscreen problems with new kwin versions,
  * fix XMB failure (fallback to standart XFont usage),
  * fix skin downloader preview blanking,
  * fix alpha artefact on when changing skins,
  * show windows in taskbar when output window is hidden,
  * fix root window and windows states,
  * Xft support in xitk (thanks to Drew 'dantealiegri' Ogle <dantealiegri@umbc.edu>),
  * fix a problem with special characters in OSD for some locales,