@@ -210,6 +210,72 @@ static const struct
 	{ "Loop mode toggle.",
 		  "ToggleLoopMode", ACTID_LOOPMODE },
 		
+#ifdef ENABLE_VDR_KEYS
+	{ "VDR Red button",
+	  "VDRButtonRed",           ACTID_EVENT_VDR_RED },
+	{ "VDR Green button",
+	  "VDRButtonGreen",         ACTID_EVENT_VDR_GREEN },
+	{ "VDR Yellow button",
+	  "VDRButtonYellow",        ACTID_EVENT_VDR_YELLOW },
+	{ "VDR Blue button",
+	  "VDRButtonBlue",          ACTID_EVENT_VDR_BLUE },
+	{ "VDR play",
+	  "VDRPlay",                ACTID_EVENT_VDR_PLAY },
+	{ "VDR Pause",
+	  "VDRPause",               ACTID_EVENT_VDR_PAUSE },
+	{ "VDR Stop",
+	  "VDRStop",                ACTID_EVENT_VDR_STOP },
+	{ "VDR Record",
+	  "VDRRecord",              ACTID_EVENT_VDR_RECORD },
+	{ "VDR Fast Forward",
+	  "VDRFastFwd",             ACTID_EVENT_VDR_FASTFWD },
+	{ "VDR Fast Rewind",
+	  "VDRFastRew",             ACTID_EVENT_VDR_FASTREW },
+	{ "VDR power",
+	  "VDRPower",               ACTID_EVENT_VDR_POWER },
+	{ "VDR next channel",
+	  "VDRChannelPlus",         ACTID_EVENT_VDR_CHANNELPLUS },
+	{ "VDR previous channel",
+	  "VDRChannelMinus",        ACTID_EVENT_VDR_CHANNELMINUS },
+	{ "VDR schedule menu",
+	  "VDRSchedule",            ACTID_EVENT_VDR_SCHEDULE },
+	{ "VDR Channel menu",
+	  "VDRChannels",            ACTID_EVENT_VDR_CHANNELS },
+	{ "VDR Timers menu",
+	  "VDRTimers",              ACTID_EVENT_VDR_TIMERS },
+	{ "VDR Recordings menu",
+	  "VDRRecordings",          ACTID_EVENT_VDR_RECORDINGS },
+	{ "VDR Setup menu",
+	  "VDRSetup",               ACTID_EVENT_VDR_SETUP },   
+	{ "VDR Command menu",
+	  "VDRCommands",            ACTID_EVENT_VDR_COMMANDS },
+	{ "VDR Command Back",
+	  "VDRBack",                ACTID_EVENT_VDR_BACK },    
+	{ "VDR User command 1",
+	  "VDRUser1",               ACTID_EVENT_VDR_USER1 },   
+	{ "VDR User command 2",
+	  "VDRUser2",               ACTID_EVENT_VDR_USER2 },   
+	{ "VDR User command 3",
+	  "VDRUser3",               ACTID_EVENT_VDR_USER3 },   
+	{ "VDR User command 4",
+	  "VDRUser4",               ACTID_EVENT_VDR_USER4 },   
+	{ "VDR User command 5",
+	  "VDRUser5",               ACTID_EVENT_VDR_USER5 },   
+	{ "VDR User command 6",
+	  "VDRUser6",               ACTID_EVENT_VDR_USER6 },   
+	{ "VDR User command 7",
+	  "VDRUser7",               ACTID_EVENT_VDR_USER7 },   
+	{ "VDR User command 8",
+	  "VDRUser8",               ACTID_EVENT_VDR_USER8 },   
+	{ "VDR User command 9",
+	  "VDRUser9",               ACTID_EVENT_VDR_USER9 },   
+	{ "VDR Volume plus",
+	  "VDRVolumePlus",          ACTID_EVENT_VDR_VOLPLUS }, 
+	{ "VDR Volume minus",
+	  "VDRVolumeMinus",         ACTID_EVENT_VDR_VOLMINUS },
+	{ "VDR Audio Mute",
+	  "VDRMute",                ACTID_EVENT_VDR_MUTE },
+#endif
 	{ 0,
 		  0, 0 }
 };
