@@ -438,6 +438,72 @@ static kbinding_entry_t default_binding_table[] = {
     "ContrastControl-",       ACTID_CONTRASTCONTROLm        , "VOID",     KEYMOD_NOMOD   , 0 , 0},
   { "quit the program",
     "Quit",                   ACTID_QUIT                    , "q",        KEYMOD_NOMOD   , 0 , 0},
+#ifdef ENABLE_VDR_KEYS
+  { "VDR Red button",
+    "VDRButtonRed",           ACTID_EVENT_VDR_RED           , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Green button",
+    "VDRButtonGreen",         ACTID_EVENT_VDR_GREEN         , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Yellow button",
+    "VDRButtonYellow",        ACTID_EVENT_VDR_YELLOW        , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Blue button",
+    "VDRButtonBlue",          ACTID_EVENT_VDR_BLUE          , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR play",
+    "VDRPlay",                ACTID_EVENT_VDR_PLAY          , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Pause",
+    "VDRPause",               ACTID_EVENT_VDR_PAUSE         , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Stop",
+    "VDRStop",                ACTID_EVENT_VDR_STOP          , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Record",
+    "VDRRecord",              ACTID_EVENT_VDR_RECORD        , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Fast Forward",
+    "VDRFastFwd",             ACTID_EVENT_VDR_FASTFWD       , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Fast Rewind",
+    "VDRFastRew",             ACTID_EVENT_VDR_FASTREW       , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR power",
+    "VDRPower",               ACTID_EVENT_VDR_POWER         , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR next channel",
+    "VDRChannelPlus",         ACTID_EVENT_VDR_CHANNELPLUS   , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR previous channel",
+    "VDRChannelMinus",        ACTID_EVENT_VDR_CHANNELMINUS  , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR schedule menu",
+    "VDRSchedule",            ACTID_EVENT_VDR_SCHEDULE      , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Channel menu",
+    "VDRChannels",            ACTID_EVENT_VDR_CHANNELS      , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Timers menu",
+    "VDRTimers",              ACTID_EVENT_VDR_TIMERS        , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Recordings menu",
+    "VDRRecordings",          ACTID_EVENT_VDR_RECORDINGS    , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Setup menu",
+    "VDRSetup",               ACTID_EVENT_VDR_SETUP         , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Command menu",
+    "VDRCommands",            ACTID_EVENT_VDR_COMMANDS      , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Command Back",
+    "VDRBack",                ACTID_EVENT_VDR_BACK          , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR User command 1",
+    "VDRUser1",               ACTID_EVENT_VDR_USER1         , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR User command 2",
+    "VDRUser2",               ACTID_EVENT_VDR_USER2         , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR User command 3",
+    "VDRUser3",               ACTID_EVENT_VDR_USER3         , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR User command 4",
+    "VDRUser4",               ACTID_EVENT_VDR_USER4         , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR User command 5",
+    "VDRUser5",               ACTID_EVENT_VDR_USER5         , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR User command 6",
+    "VDRUser6",               ACTID_EVENT_VDR_USER6         , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR User command 7",
+    "VDRUser7",               ACTID_EVENT_VDR_USER7         , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR User command 8",
+    "VDRUser8",               ACTID_EVENT_VDR_USER8         , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR User command 9",
+    "VDRUser9",               ACTID_EVENT_VDR_USER9         , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Volume plus",
+    "VDRVolumePlus",          ACTID_EVENT_VDR_VOLPLUS       , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Volume minus",
+    "VDRVolumeMinus",         ACTID_EVENT_VDR_VOLMINUS      , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+  { "VDR Audio Mute",
+    "VDRMute",                ACTID_EVENT_VDR_MUTE          , "VOID",     KEYMOD_NOMOD   , 0 , 0},
+#endif
   { 0,
     0,                        0,                              0,          0              , 0 , 0}
 };
